# ci_watson

./: .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  CHANGES.rst  Jenkinsfile  JenkinsfileRT  LICENSE.md  MANIFEST.in  README.md  conftest.py  pip-requirements-doc  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_workflows.yml
changes/: 74.misc.rst  README.rst
ci_watson/: artifactory_helpers.py  base_classes.py  hst_helpers.py  jwst_helpers.py  plugin.py  resource_tracker.py
ci_watson/scripts/: okify_regtests.py
docs/: Makefile  make.bat
docs/source/: bigdata.rst  conf.py  index.rst  plugin.rst  ref_api.rst  scripts.rst
tests/: conftest.py  test_artifactory_helpers.py  test_fixtures.py  test_hst_helpers.py  test_markers.py  test_resource_tracker.py
