[project]
name = "ci_watson"
description = "CI helper for STScI regression testing"
requires-python = ">=3.9"
authors = [
    { name = "STScI", email = "help@stsci.edu" },
]
classifiers = [
    "Framework :: Pytest",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "crds",
    "colorama>=0.4.1",
    "pytest>=6",
    "readchar>=3.0",
    "requests",
]
license-files = ["LICENSE.md"]
dynamic = [
    "version",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/spacetelescope/ci_watson"

[project.entry-points.pytest11]
pytest_ciwatson = "ci_watson.plugin"

[project.scripts]
okify_regtests = "ci_watson.scripts.okify_regtests:main"

[project.optional-dependencies]
all = [
    "astropy>=6",
]
test = [
    "pytest-astropy-header",
]
docs = [
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx_design",
    "sphinx-copybutton",
    "sphinx-automodapi",
]

[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "tests",
]
namespaces = false

[tool.setuptools_scm]
version_file = "ci_watson/version.py"

[tool.pytest.ini_options]
minversion = "6"
testpaths = [
    "tests",
]
norecursedirs = [
    ".eggs",
    "build",
]
astropy_header = true
xfail_strict = true
inputs_root = "ci-watson"
junit_family = "xunit2"
filterwarnings = [
    "error",
    "ignore:numpy.ndarray size changed:RuntimeWarning",
]
addopts = "-p no:legacypath"

[tool.ruff.lint]
select = [
    "E9", # syntax / io error
    "F63", # assertion traps
    "F7", # keyword outside special block
    "F82", # undefined variables
]
