[metadata]
package_name = ci_watson
description = CI helper for STScI Jenkins
author = STScI
author_email = help@stsci.edu
license = BSD
url = https://github.com/spacetelescope/ci_watson
classifier =
    Framework :: Pytest
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries :: Python Modules

[tool:pytest]
minversion = 3
norecursedirs = .eggs build relic
inputs_root = ci-watson

[flake8]
exclude = setup.py,relic,conf.py
