[metadata]
name = ci_watson
description = CI helper for STScI Jenkins
author = STScI
author_email = help@stsci.edu
license = BSD-3-Clause
license_files = LICENSE.md
url = https://github.com/spacetelescope/ci_watson
long_description = file: README.md
long_description_content_type = text/markdown
classifier =
    Framework :: Pytest
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries :: Python Modules

[options]
# We set packages to find: to automatically find all sub-packages
packages = find:
include_package_data = True
zip_safe = False
setup_requires = setuptools_scm
install_requires =
    pytest>=6
    requests
    crds
python_requires = >=3.9

[options.packages.find]
exclude =
    tests

[options.extras_require]
all =
    astropy
test =
    pytest-astropy-header
docs =
    numpydoc
    sphinx_rtd_theme>1.2.0
    sphinx-automodapi

[options.entry_points]
pytest11 =
    pytest_ciwatson = ci_watson.plugin

[tool:pytest]
minversion = 6
testpaths = "tests"
norecursedirs = .eggs build
astropy_header = true
xfail_strict = true
inputs_root = ci-watson
junit_family = xunit2
filterwarnings =
    error
    ignore:numpy.ndarray size changed:RuntimeWarning
addopts = "-p no:legacypth"
